2008-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winDialog.test: Fixed hanging tk_chooseColor tests.

2008-05-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/tk.tcl: Support for ttk widgets in AmpWidget
	* doc/button.n: Note negative widths for button [Patch #1883418]

2008-05-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/ttk_*: 'identify' widget command is on all ttk widgets.

2008-05-04  Joe English  <jenglish@users.sourceforge.net>

	* macosx/ttkMacOSAquaTheme.c: "default" and "focus" adornments
	should not be disjoint [Bug 1942785]

2008-04-27  Donal K. Fellows  <dkf@users.sf.net>

	* */*.c: A large tranche of getting rid of pre-C89-isms; if your
	compiler doesn't support things like proper function declarations,
	'void' and 'const', borrow a proper one when building Tcl. (The header
	files allow building things that link against Tcl with really ancient
	compilers still; the requirement is just when building Tcl itself.)

2008-04-25  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/treeview.tcl: BUGFIX: [$tv selection] takes
	a list of items, not a single item [Bug 1951733].

2008-04-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Include ws2_32 in the link list [Bug 1900872]
	* doc/menu.n: Minor change regarding the system menu [Bug 1887169]
	* doc/button.n: Minor clarification of button flash [Bug 1926223]

2008-04-17  Donal K. Fellows  <dkf@cspool38.cs.man.ac.uk>

	* doc/text.n: Correct description of when -relief option is ignored on
	a tag. Thanks to emiliano for spotting.

2008-04-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkCanvas.c:   Fix logic that determines when canvas item
	<Enter> event should fire.  Thanks to Sebastian Wangnick. [Bug 1327482]

2008-04-16  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkStubInit.c:			make stubs tables static const
	* generic/tkWindow.c (Initialize):	and export only a module-scope